kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-price-comparator-deployment
  labels:
    app: game-price-comparator
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: game-price-comparator
  template:
    metadata:
      labels:
        app: game-price-comparator
    spec:
      automountServiceAccountToken: false
      containers:
        - name: game-price-comparator
          resources:
            limits:
              cpu: "0.7"
          image: 'docker.io/kkkira/game-price-comparator:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: game-price-comparator-service
spec:
  type: LoadBalancer
  selector:
    app: game-price-comparator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
