kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: container-pg
          resources:
            limits:
              memory: 1Gi
              cpu: "0.5"
          image: 'docker.io/library/postgres:latest'
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /data
              readOnly: false
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
